[package]
name = "members-db"
version = "0.1.0"
authors = ["Naoki Ikeguchi <root@siketyan.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.1"
readonly = "0.1.6"
reqwest = { version = "0.10.6", features = ["blocking", "json", "rustls-tls"], default-features = false }
rocket = "0.4.5"
rocket_contrib = { version = "0.4.5", features = ["uuid"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_yaml = "0.8"
uuid = { version = "0.8", features = ["serde", "v4"] }
